Add TODOs in class PostingList